erDiagram
    %% Exact schema from server/models.ts (Sequelize models)

    Role {
        int role_id PK
        string role_name
        string description
        datetime created_at
        datetime updated_at
    }

    User {
        int user_id PK
        string name
        string email
        string username
        string password_hash
        string avatar_url
        boolean is_active
        int role_id FK
        datetime created_at
        datetime updated_at
    }

    GreenSpace {
        int space_id PK
        string name
        string location
        int total_area_m2
        int trees_count
        text images
        datetime created_at
        datetime updated_at
    }

    GreenSpaceReview {
        int green_space_review_id PK
        int space_id FK
        int user_id FK
        string review_notes
        int rating
        datetime created_at
        datetime updated_at
    }

    TreeType {
        int type_id PK
        string name
        string description
        text reference_images
        datetime created_at
        datetime updated_at
    }

    TreeInventory {
        int tree_id PK
        string name
        enum health_status "healthy|regular|sick|dead"
        int space_id FK
        int type_id FK "nullable"
        enum status "pending|approved|rejected"
        int submitted_by_user_id FK
        int validated_by_user_id FK "nullable"
        text images
        datetime created_at
        datetime updated_at
    }

    TreeTypeSuggestion {
        int tree_type_suggestion_id PK
        string name
        text description
        text reference_images
        enum status "pending|approved|rejected"
        int suggested_by_user_id FK
        int approved_by_user_id FK "nullable"
        int tree_type_id FK "nullable"
        string admin_notes
        datetime created_at
        datetime updated_at
    }

    ReportOfGreenArea {
        int report_of_green_area_id PK
        string title
        text description
        text url_images
        string state
        datetime created_at
        datetime updated_at
        int user_id FK
        int space_id FK
    }

    GreenMetricRecord {
        int record_id PK
        datetime calculation_date
        float total_campus_area_m2
        float green_area_m2
        int campus_population
        float dense_vegetation_area_m2
        float rainwater_absorption_area_m2
        float sustainability_budget
        float conservation_operation_budget
        float metric_1_green_area_ratio
        float metric_2_green_area_per_capita
        float metric_3_dense_vegetation_ratio
        float metric_4_rainwater_absorption_ratio
        float metric_5_sustainability_budget_share
        float metric_6_conservation_operation_share
        int created_by_user_id FK
        datetime created_at
        datetime updated_at
    }

    ProposalOfGreenArea {
        int proposal_of_green_area_id PK
        string title
        text description
        enum status "draft|open|closed|approved|rejected"
        int total_votes
        int minimum_votes_required "nullable"
        datetime voting_starts "nullable"
        datetime voting_ends "nullable"
        int user_id FK
        int space_id FK
        datetime created_at
        datetime updated_at
    }

    ProjectOfProposal {
        int project_of_proposal_id PK
        string title
        text description
        enum completed_status "planned|in_progress|completed"
        int proposal_of_green_area_id FK
        int space_id FK
        datetime created_at
        datetime updated_at
    }

    ProjectUpdateOfProposal {
        int project_update_of_proposal_id PK
        string title
        text description
        text activity_images
        int project_of_proposal_id FK
        int user_id FK
        datetime created_at
        datetime updated_at
    }

    VoteOfProposal {
        int vote_of_proposal_id PK
        int proposal_of_green_area_id FK
        int user_id FK
        datetime created_at
    }

    %% Relationships defined in Sequelize associations
    Role ||--o{ User : assigns

    User ||--o{ ReportOfGreenArea : creates
    GreenSpace ||--o{ ReportOfGreenArea : has

    User ||--o{ GreenSpaceReview : writes
    GreenSpace ||--o{ GreenSpaceReview : has

    User ||--o{ ProposalOfGreenArea : proposes
    GreenSpace ||--o{ ProposalOfGreenArea : has

    User ||--o{ GreenMetricRecord : records

    ProposalOfGreenArea ||--o{ VoteOfProposal : receives
    User ||--o{ VoteOfProposal : casts

    ProposalOfGreenArea ||--o{ ProjectOfProposal : generates
    GreenSpace ||--o{ ProjectOfProposal : has
    ProjectOfProposal ||--o{ ProjectUpdateOfProposal : logs
    User ||--o{ ProjectUpdateOfProposal : records

    GreenSpace ||--o{ TreeInventory : contains
    TreeType ||--o{ TreeInventory : classifies
    User ||--o{ TreeInventory : submits
    User ||--o{ TreeInventory : validates

    User ||--o{ TreeTypeSuggestion : suggests
    User ||--o{ TreeTypeSuggestion : reviews
    TreeType ||--o{ TreeTypeSuggestion : links
